--- a/src/MovieLibrary/components/MovieLibrary.css
+++ b/src/MovieLibrary/components/MovieLibrary.css
@@ -8,7 +8,7 @@
 }
 
 .ML-header {
-  background-color: #222;
+  background-color: rgb(58, 23, 23);
   height: 150px;
   padding: 20px;
   color: white;
