--- a/src/MovieLibrary/components/MoviesList.css
+++ b/src/MovieLibrary/components/MoviesList.css
@@ -7,13 +7,13 @@
 }
 
 .movies-list > .items {
-  width: 20%;
  display: grid;
- grid-template-columns: auto auto auto auto auto;
+ grid-template-columns: auto auto auto auto;
+ justify-content: center;
 }
 
 .movies-list > .sorter {
-  width: 20%;
+  /* width: 20%; */
   margin: 2%;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .expanded-movie-item  > .description {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 .description span {
   font-weight: 100;
@@ -39,8 +39,8 @@
 .movie-list-item {
   cursor: pointer;
   background-color: #256;
-  width: 330px;
-  height: 430px;
+  /* width: 330px; */
+  height: auto;
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -58,3 +58,7 @@
   text-decoration: underline;
 }
 
+.poster{
+  width: 75%;
+  padding: 30px;
+}
