--- a/src/MovieLibrary/components/MovieLibrary.css
+++ b/src/MovieLibrary/components/MovieLibrary.css
@@ -22,6 +22,13 @@
   font-size: large;
 }
 
+.ML-loader {
+  height: 100px;
+  margin: 30px;
+  text-align: center;
+  font-size: 2rem;
+}
+
 @keyframes ML-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(720deg); }
