--- a/src/MovieLibrary/components/MoviesList.css
+++ b/src/MovieLibrary/components/MoviesList.css
@@ -3,13 +3,12 @@
   flex-direction: row; */
   /* justify-content: center; */
   /* align-items: center; */
-
 }
 
 .movies-list > .items {
- display: grid;
- grid-template-columns: auto auto auto auto;
- justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: center;
 }
 
 .movies-list > .sorter {
@@ -22,7 +21,6 @@
   display: flex;
   flex-direction: row;
 }
-
 
 .expanded-movie-item h4 {
   display: inline;
@@ -58,7 +56,25 @@
   text-decoration: underline;
 }
 
-.poster{
+.poster {
   width: 75%;
   padding: 30px;
+}
+
+@media only screen and (max-width: 900px) {
+  .movies-list > .items {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .movies-list > .items {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .movies-list > .items {
+    grid-template-columns: auto;
+  }
 }
